force-app/main/default/objects/Franchise__c/Franchise__c.object-meta.xml
<CustomObject>
    <label>Franchise</label>
    <nameField>
        <displayFormat>Franchise-{0}</displayFormat>
        <label>Franchise</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Franchises</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>