force-app/main/default/objects/Franchise__c/fields/food_amount__c.field-meta.xml
<CustomField>
    <fullName>food_amount__c</fullName>
    <label>food amount</label>
    <summaryForeignKey>Food__c.food_order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>