force-app/main/default/objects/Franchise__c/fields/food_left__c.field-meta.xml
<CustomField>
    <fullName>food_left__c</fullName>
    <label>food left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>