force-app/main/default/objects/Franchise__c/fields/Franchise_Country__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Country__c</fullName>
    <label>Franchise Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>