force-app/main/default/objects/Franchise__c/fields/Franchise_Name__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Name__c</fullName>
    <label>Franchise Name</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
</CustomField>