force-app/main/default/objects/Franchise__c/fields/FranchiseLocation__c.field-meta.xml
<CustomField>
    <fullName>FranchiseLocation__c</fullName>
    <label>FranchiseLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>