force-app/main/default/objects/Franchise__c/listViews/awesomesauce.listView-meta.xml
<ListView>
    <fullName>awesomesauce</fullName>
    <columns>NAME</columns>
    <columns>food_amount__c</columns>
    <columns>food_left__c</columns>
    <filterScope>Mine</filterScope>
    <label>awesomesauce</label>
</ListView>